--- a/perfil.html
+++ b/perfil.html
@@ -5,95 +5,151 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Perfil - Cancha360</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .avatar {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #ccc;
+    }
+  </style>
 </head>
 <body>
-  <div class="container mt-5">
-    <h1>👤 Mi Perfil</h1>
-    <p id="user-email"></p>
+  <div class="container mt-4">
+    <h2>👤 Mi Perfil</h2>
+    <a href="dashboard.html" class="btn btn-secondary mb-3">⬅️ Volver al Dashboard</a>
 
-    <!-- Avatar actual -->
-    <div class="mb-3">
-      <img id="avatar-img" src="" alt="Tu avatar" class="rounded-circle border" width="150" height="150">
+    <div class="card p-4">
+      <div class="text-center mb-3">
+        <img id="user-avatar" src="https://via.placeholder.com/120" alt="Avatar" class="avatar mb-2">
+        <div>
+          <input type="file" id="avatar-input" accept="image/png" class="form-control mt-2">
+          <button id="btn-subir-avatar" class="btn btn-primary mt-2">Cambiar Avatar</button>
+        </div>
+        <p class="text-danger small">* Solo imágenes .png</p>
+      </div>
+
+      <form id="perfil-form">
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input type="text" id="nombre" class="form-control" required>
+        </div>
+        <div class="mb-3">
+          <label for="telefono" class="form-label">Teléfono</label>
+          <input type="text" id="telefono" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-success">Guardar cambios</button>
+      </form>
     </div>
-
-    <!-- Subir nuevo avatar -->
-    <div class="mb-3">
-      <label for="avatar-input" class="form-label">Cambiar avatar</label>
-      <input type="file" id="avatar-input" class="form-control" accept="image/*">
-    </div>
-
-    <button id="upload-btn" class="btn btn-success">Subir nuevo avatar</button>
-    <a href="dashboard.html" class="btn btn-secondary">Volver al Dashboard</a>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
-    const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
-    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4"; 
-    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+  const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4";
+  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    let currentUser = null;
+  let currentUser = null;
 
-    async function loadProfile() {
-      const { data: { session } } = await supabase.auth.getSession();
-      if (!session) {
-        window.location.href = "login.html";
-        return;
-      }
+  async function loadProfile() {
+    const { data: { session } } = await supabase.auth.getSession();
 
-      currentUser = session.user;
-      document.getElementById("user-email").textContent = `Conectado como: ${currentUser.email}`;
-
-      // Traer datos de la tabla usuarios
-      const { data: userData, error } = await supabase
-        .from("usuarios")
-        .select("avatar_url")
-        .eq("id", currentUser.id)
-        .single();
-
-      if (userData && userData.avatar_url) {
-        document.getElementById("avatar-img").src = userData.avatar_url;
-      } else {
-        document.getElementById("avatar-img").src = "https://via.placeholder.com/150?text=Avatar";
-      }
+    if (!session) {
+      window.location.href = "login.html";
+      return;
     }
 
-    // Subir avatar
-    document.getElementById("upload-btn").addEventListener("click", async () => {
-      const file = document.getElementById("avatar-input").files[0];
-      if (!file) {
-        alert("Selecciona un archivo primero");
-        return;
-      }
+    currentUser = session.user;
 
-      const path = `${currentUser.id}/${file.name}`;
-      const { error: uploadError } = await supabase.storage
-        .from("avatars")
-        .upload(path, file, { upsert: true });
+    // Traer datos de tabla usuarios
+    const { data: userData, error } = await supabase
+      .from("usuarios")
+      .select("nombre, telefono, avatar_url")
+      .eq("id", currentUser.id)
+      .single();
 
-      if (uploadError) {
-        alert("❌ Error al subir: " + uploadError.message);
-        return;
-      }
+    if (error) {
+      console.error("Error cargando perfil:", error.message);
+      return;
+    }
 
-      // Obtener URL pública
-      const { data: publicUrl } = supabase.storage
-        .from("avatars")
-        .getPublicUrl(path);
+    document.getElementById("nombre").value = userData?.nombre || "";
+    document.getElementById("telefono").value = userData?.telefono || "";
 
-      // Guardar en tabla usuarios
-      await supabase.from("usuarios")
-        .update({ avatar_url: publicUrl.publicUrl })
-        .eq("id", currentUser.id);
+    // Avatar con fallback (tabla, Google, placeholder)
+    let avatarUrl = "https://via.placeholder.com/120?text=👤";
+    if (userData && userData.avatar_url) {
+      avatarUrl = userData.avatar_url;
+    } else if (currentUser.user_metadata && currentUser.user_metadata.avatar_url) {
+      avatarUrl = currentUser.user_metadata.avatar_url;
+    }
+    document.getElementById("user-avatar").src = avatarUrl;
+  }
 
-      console.log("✅ URL pública generada:", publicUrl.publicUrl);
+  // Guardar cambios en nombre y teléfono
+  document.getElementById("perfil-form").addEventListener("submit", async (e) => {
+    e.preventDefault();
 
+    const nombre = document.getElementById("nombre").value;
+    const telefono = document.getElementById("telefono").value;
 
-      document.getElementById("avatar-img").src = publicUrl.publicUrl;
-      alert("✅ Avatar actualizado!");
-    });
+    const { error } = await supabase
+      .from("usuarios")
+      .update({ nombre, telefono })
+      .eq("id", currentUser.id);
 
-    loadProfile();
+    if (error) {
+      alert("❌ Error al guardar: " + error.message);
+    } else {
+      alert("✅ Perfil actualizado");
+    }
+  });
+
+  // Subir nuevo avatar
+  document.getElementById("btn-subir-avatar").addEventListener("click", async () => {
+    const fileInput = document.getElementById("avatar-input").files[0];
+    if (!fileInput) {
+      alert("⚠️ Selecciona un archivo .png primero");
+      return;
+    }
+
+    if (!fileInput.name.endsWith(".png")) {
+      alert("⚠️ Solo se permiten archivos .png");
+      return;
+    }
+
+    const filePath = `public/${currentUser.id}.png`;
+
+    const { error: uploadError } = await supabase.storage
+      .from("avatars")
+      .upload(filePath, fileInput, { upsert: true });
+
+    if (uploadError) {
+      alert("❌ Error al subir: " + uploadError.message);
+      return;
+    }
+
+    // Obtener URL pública
+    const { data: publicUrl } = supabase.storage
+      .from("avatars")
+      .getPublicUrl(filePath);
+
+    // Guardar URL en la tabla usuarios
+    const { error: updateError } = await supabase
+      .from("usuarios")
+      .update({ avatar_url: publicUrl.publicUrl })
+      .eq("id", currentUser.id);
+
+    if (updateError) {
+      alert("❌ Error al actualizar avatar: " + updateError.message);
+    } else {
+      document.getElementById("user-avatar").src = publicUrl.publicUrl;
+      alert("✅ Avatar actualizado correctamente");
+    }
+  });
+
+  loadProfile();
   </script>
 </body>
 </html>
